adição icone do site

--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se</title>
+    <link rel="icon" href='assets/icons/icon SS.png' type="image/x-icon"/>
     <link rel="stylesheet" href="css/logincadastro.css">
     <script src="./js/sessao.js"></script>
 </head>
