--- a/public/quizLyrics.html
+++ b/public/quizLyrics.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link rel="icon" href='assets/icons/icon SS.png' type="image/x-icon"/>
     <link rel="stylesheet" href="css/quizLyrics.css">
     <link rel="stylesheet" href="css/dashboards.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
