--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -16,8 +16,8 @@
       <h1 class="titulo"><a href="index.html">SwiftSpace</a></h1>
       <ul class="navbar">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="index.html#noticias">Noticias</a></li>
-        <li><a href="index.html#sobremim">Sobre Mim</a></li>
+        <li><a href="index.html#inicio">Álbuns</a></li>
+        <li><a href="index.html#sobremim">Sobre</a></li>
         <li class="entrar"><a href="login.html">Entrar</a></li>
       </ul>
     </div>
