--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="grafico-albuns">
-                    <h3>QUANTIDADE DE USUÁRIOS POR ÁLBUM</h3>
+                    <h3>POPULARIDADE DOS ÁLBUNS</h3>
                     <canvas id="graficoAlbuns" class='grafico-album'></canvas>
                 </div>
             </div>
